wip: feat: add endpoint whoami
