# docs/api.yml
@@ -2,14 +2,48 @@ openapi: '3.0.2'
 info:
   title: Karetsaka API
   version: '1.0'
+
 servers:
   - url: https://app.karetsaka.com/api/v1
+
+security:
+  - BearerAuth: [ ]
+
 tags:
+  - name: Security
   - name: Users
   - name: Cars
   - name: Images
   - name: Appointments
+
 paths:
+  /whoami:
+    get:
+      tags:
+        - Security
+      summary: Who am I? Tells you who you are.
+      operationId: whoami
+      responses:
+        '200':
+          description: Who you are
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /ping:
+    get:
+      tags:
+        - Security
+      summary: pong
+      operationId: ping
+      responses:
+        '200':
+          description: pong
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: pong
 
 # ----------------- Users ------------------
   /users:
@@ -334,6 +368,11 @@ paths:
 
 
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      
   schemas:
     CreateUser:
       type: object
